--- a/Model building/Add CNN layer.ipynb
+++ b/Model building/Add CNN layer.ipynb
@@ -6,7 +6,7 @@
         "id": "9UR1mrBhQFs5"
       },
       "source": [
-        "TEAM ID:d"
+        "TEAM ID:PNT2022TMID02158"
       ]
     },
     {
@@ -500,11 +500,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.3 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.3"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "47ec762f914a163e56c398822d2409c1abc4573a154341c06262bb198c02cb66"
+      }
     }
   },
   "nbformat": 4,
